# project-1/docs/swagger.json
@@ -9,23 +9,70 @@
         }
     },
     "paths": {
-        "/users": {
-            "get": {
-                "description": "Get all users or throw an error",
+        "/employee/{id}": {
+            "delete": {
+                "description": "Delete employee by ID or throw an error",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Employees"
                 ],
-                "summary": "Get all users",
+                "summary": "Delete employee by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "employee id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.CommonResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.CommonError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/controller.CommonError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controller.CommonError"
+                        }
+                    }
+                }
+            }
+        },
+        "/employees": {
+            "get": {
+                "description": "Get all employees or throw an error",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Employees"
+                ],
+                "summary": "Get all employees",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.User"
+                                "$ref": "#/definitions/models.Employee"
                             }
                         }
                     },
@@ -38,22 +85,22 @@
                 }
             },
             "post": {
-                "description": "Add new user or throw an error",
+                "description": "Add new employee or throw an error",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Employees"
                 ],
-                "summary": "Add new user",
+                "summary": "Add new employee",
                 "parameters": [
                     {
-                        "description": "new user info",
+                        "description": "new employee info",
                         "name": "request_body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UserCreateRequest"
+                            "$ref": "#/definitions/dto.EmployeeCreateRequest"
                         }
                     }
                 ],
@@ -85,20 +132,20 @@
                 }
             }
         },
-        "/users/{id}": {
+        "/employees/{id}": {
             "get": {
-                "description": "Get user by ID or throw an error",
+                "description": "Get employee by ID or throw an error",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Employees"
                 ],
-                "summary": "Get user by ID",
+                "summary": "Get employee by ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "id of user",
+                        "description": "id of employee",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -108,7 +155,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.Employee"
                         }
                     },
                     "400": {
@@ -132,29 +179,29 @@
                 }
             },
             "put": {
-                "description": "Update user by ID or throw an error",
+                "description": "Update employee by ID or throw an error",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Employees"
                 ],
-                "summary": "Update user by ID",
+                "summary": "Update employee by ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "user id",
+                        "description": "employee id",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "user info",
+                        "description": "employee info",
                         "name": "request_body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UserCreateRequest"
+                            "$ref": "#/definitions/dto.EmployeeCreateRequest"
                         }
                     }
                 ],
@@ -190,51 +237,6 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "description": "Delete user by ID or throw an error",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Delete user by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "user id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controller.CommonResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/controller.CommonError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/controller.CommonError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/controller.CommonError"
-                        }
-                    }
-                }
             }
         }
     },
@@ -255,7 +257,7 @@
                 }
             }
         },
-        "dto.UserCreateRequest": {
+        "dto.EmployeeCreateRequest": {
             "type": "object",
             "properties": {
                 "age": {
@@ -269,7 +271,7 @@
                 }
             }
         },
-        "models.User": {
+        "models.Employee": {
             "type": "object",
             "properties": {
                 "age": {
