# project-1/internal/models/employees.go
@@ -1,8 +1,14 @@
 package models
 
-type User struct {
+import "fmt"
+
+type Employee struct {
 	ID    int    `json:"id" db:"id"`
 	Name  string `json:"name" db:"name"`
 	Email string `json:"email" db:"email"`
 	Age   int    `json:"age" db:"age"`
+}
+
+func (u Employee) CacheKey() string {
+	return fmt.Sprintf("employee_%d", u.ID)
 }
